--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,16 +73,26 @@ section.active .modal-box {
   color: #4070f4;
 }
 .modal-box h2 {
-  margin-top: 20px;
+  margin-top: 5px;
   font-size: 25px;
   font-weight: 500;
   color: #333;
 }
 .modal-box h3 {
+  margin-top: 10px;
   font-size: 16px;
   font-weight: 400;
   color: #333;
   text-align: center;
+}
+
+.modal-box h4 {
+  font-size: 12px;
+  font-weight: 400;
+  color: #333;
+  text-align: center;
+  font-style: italic;
+  
 }
 .modal-box .buttons {
   margin-top: 25px;
